--- a/enhancements/index.html
+++ b/enhancements/index.html
@@ -3,15 +3,21 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="apple-touch-icon" sizes="76x76" href="../images/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="../images/favicon-16x16.png">
-<link rel="manifest" href="../images/site.webmanifest">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="theme-color" content="#ffffff">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="theme-color" content="#004e92">
 <meta name="mobile-web-app-capable" content="yes">
+<meta http-equiv="Cache-control" content="NO-STORE">
+<meta name="robots" content="noindex, nofollow">
+<meta name="mobile-web-app-capable" content="yes">
+<link rel="icon" sizes="72x72" href="images/icons/icon-72x72.png">
+<link rel="icon" sizes="96x96" href="images/icons/icon-96x96.png">
+<link rel="icon" sizes="128x128" href="images/icons/icon-128x128.png">
+<link rel="icon" sizes="144x144" href="images/icons/icon-144x144.png">
+<link rel="icon" sizes="152x152" href="images/icons/icon-152x152.png">
+<link rel="icon" sizes="192x192" href="images/icons/icon-192x192.png">
+<link rel="icon" sizes="384x384" href="images/icons/icon-384x384.png">
+<link rel="icon" sizes="512x512" href="images/icons/icon-512x512.png">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 <script  src="enhance.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 <title>City of Heroes - Enhancements</title>
