--- a/comics/index.html
+++ b/comics/index.html
@@ -93,11 +93,11 @@ function onDeviceReady() {
 <br/>
 <div class="body_display">
 
-<div class="comic_display" onclick="window.open('https://rednet.pw:48512/coh-codex/comics/pdf/midnight_hour.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/midnight_hour.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/midnight_hour.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">The Midnight Hour</div>
 </div>
-<div class="comic_display" onclick="window.open('https://rednet.pw:48512/coh-codex/comics/pdf/comic_wedding_000.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/comic_wedding_000.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/comic_wedding_000.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Wedding Special</div>
 </div>
@@ -107,111 +107,111 @@ function onDeviceReady() {
 <br/>
 <div class="body_display">
 
-<div class="comic_display" onclick="window.open('./pdf/comic_01.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/comic_01.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/comic_01.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 1</div>
 </div>
 
-<div class="comic_display" onclick="window.open('./pdf/comic_02.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/comic_02.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/comic_02.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 2</div>
 </div>
 
-<div class="comic_display" onclick="window.open('./pdf/comic_03.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/comic_03.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/comic_03.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 3</div>
 </div>
 
-<div class="comic_display" onclick="window.open('./pdf/comic_04.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/comic_04.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/comic_04.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 4</div>
 </div>
 
-<div class="comic_display" onclick="window.open('./pdf/comic_05.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/comic_05.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/comic_current.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 5</div>
 </div>
 
-<div class="comic_display" onclick="window.open('./pdf/comic_06.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/comic_06.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/comic_0601_002.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 6</div>
 </div>
 
-<div class="comic_display" onclick="window.open('./pdf/comic_07.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/comic_07.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/issue7_002.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 7</div>
 </div>
 
-<div class="comic_display" onclick="window.open('./pdf/comic_08.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/comic_08.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/comic_0801_cover_000.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 8</div>
 </div>
 
-<div class="comic_display" onclick="window.open('./pdf/comic_09.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/comic_09.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/comic_0901_cover_000.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 9</div>
 </div>
 
-<div class="comic_display" onclick="window.open('./pdf/comic_10.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/comic_10.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/comic_1001_cover_001.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 10</div>
 </div>
 
-<div class="comic_display" onclick="window.open('./pdf/comic_11.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/comic_11.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/comic_11.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 11</div>
 </div>
 
 
-<div class="comic_display" onclick="window.open('./pdf/comic_12.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/comic_12.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/comic_12.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 12</div>
 </div>
 
 
-<div class="comic_display" onclick="window.open('./pdf/comic_13.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/comic_13.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/comic_13_000.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 13</div>
 </div>
 
 
-<div class="comic_display" onclick="window.open('./pdf/comic_14.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/comic_14.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/comic_14_cover.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 14</div>
 </div>
 
 
-<div class="comic_display" onclick="window.open('./pdf/comic_15.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/comic_15.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/COH015_cover_000.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 15</div>
 </div>
 
 
-<div class="comic_display" onclick="window.open('./pdf/comic_16.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/comic_16.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/comic16.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 16</div>
 </div>
 
 
-<div class="comic_display" onclick="window.open('./pdf/comic_17.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/comic_17.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/comic17.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 17</div>
 </div>
 
 
-<div class="comic_display" onclick="window.open('./pdf/comic_18.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/comic_18.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/comic18_000.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 18</div>
 </div>
 
 
-<div class="comic_display" onclick="window.open('./pdf/comic_19.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/comic_19.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/comic_19_small.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 19</div>
 </div>
 
 
-<div class="comic_display" onclick="window.open('./pdf/comic_20.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/comic_20.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/comic_20_sm.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 20</div>
 </div>
@@ -221,62 +221,62 @@ function onDeviceReady() {
 <br/>
 <div class="body_display">
 
-<div class="comic_display" onclick="window.open('./pdf/bk_issue1.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/bk_issue1.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/BK_1.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 1</div>
 </div>
 
-<div class="comic_display" onclick="window.open('./pdf/bk_issue2.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/bk_issue2.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/BK_2.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 2</div>
 </div>
 
-<div class="comic_display" onclick="window.open('./pdf/bk_issue3.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/bk_issue3.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/BK_3.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 3</div>
 </div>
 
-<div class="comic_display" onclick="window.open('./pdf/bk_issue4.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/bk_issue4.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/BK_4.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 4</div>
 </div>
 
-<div class="comic_display" onclick="window.open('./pdf/bk_issue5.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/bk_issue5.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/BK_5.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 5</div>
 </div>
 
-<div class="comic_display" onclick="window.open('./pdf/bk_issue6.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/bk_issue6.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/BK_6.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 6</div>
 </div>
 
-<div class="comic_display" onclick="window.open('./pdf/bk_issue7.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/bk_issue7.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/BK_7.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 7</div>
 </div>
 
-<div class="comic_display" onclick="window.open('./pdf/bk_issue8.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/bk_issue8.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/BK_8.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 8</div>
 </div>
 
-<div class="comic_display" onclick="window.open('./pdf/bk_issue9.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/bk_issue9.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/Bk_9.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 9</div>
 </div>
 
-<div class="comic_display" onclick="window.open('./pdf/bk_issue10.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/bk_issue10.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/Bk_10.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 10</div>
 </div>
 
-<div class="comic_display" onclick="window.open('./pdf/bk_issue11.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/bk_issue11.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/Bk_11.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 11</div>
 </div>
 
-<div class="comic_display" onclick="window.open('./pdf/bk_issue12.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/bk_issue12.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/BK_12.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 12</div>
 </div>
@@ -287,7 +287,7 @@ function onDeviceReady() {
 <br/>
 <div class="body_display">
 
-<div class="comic_display" onclick="window.open('./pdf/coh_promo_issue.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/coh_promo_issue.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/coh_promo_comic_cover_thumb.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 1</div>
 </div>
@@ -298,12 +298,12 @@ function onDeviceReady() {
 <br/>
 <div class="body_display">
 
-<div class="comic_display" onclick="window.open('./pdf/COHfanzine8X10new.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/COHfanzine8X10new.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/Thumbnail-COHfanzine8X10new.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 0</div>
 </div>
 
-<div class="comic_display" onclick="window.open('./pdf/COHfanzine01_finalLowRez.pdf','_system')">
+<div class="comic_display" onclick="window.open('./pdf/COHfanzine01_finalLowRez.pdf','_blank')">
   <div class="sub_menu"><img src="./thumbnail/Thumbnail-COHfanzine01_finalLowRez.jpg" class="display_box_comic"></div>
   <div class="sub_menu_text_comic">Issue 1</div>
 </div>
