--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
     <link rel="icon" sizes="384x384" href="images/icons/icon-384x384.png">
     <link rel="icon" sizes="512x512" href="images/icons/icon-512x512.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+        integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"
+        integrity="sha512-57oZ/vW8ANMjR/KQ6Be9v/+/h6bq9/l3f0Oc7vn6qMqyhvPd1cvKBRWWpzu0QoneImqr2SkmO4MSqU+RpHom3Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script language="javascript" type="text/javascript">
      var images = new Array()
      var images2 = new Array()
@@ -104,62 +108,74 @@ window.onload=function(){
     <br />
 
     <br />
+
     <div class="main_block">
-      <div class="menu_block" onclick="window.open('https://paragonwiki.com/wiki/Main_Page','_blank')">
-        <div class="sub_menu"><img src="images/statesman.png" class="menu_icon_main" id="paragon"></div>
-        <div class="sub_menu_text_main">Paragon<br />Wiki</div>
-      </div>
-      <div class="menu_block" onclick="window.open('./cohmaps/','_self')">
-        <div class="sub_menu"><img src="images/Mutationbadge.png" class="menu_icon_main"></div>
-        <div class="sub_menu_text_main">Paragon<br />City Maps</div>
-      </div>
 
-      <div class="menu_block" onclick="window.open('./comics/','_self')">
-        <div class="sub_menu"><img src="images/Naturalbadge.png" class="menu_icon_main"></div>
-        <div class="sub_menu_text_main">Comics<br />Archive</div>
-      </div>
+      <a href="./cohmaps/" target="_self">
+        <div class="menu_block">
+          <div class="sub_menu"><img src="images/Mutationbadge.png" class="menu_icon_main"></div>
+          <div class="sub_menu_text_main">Paragon<br />City Maps</div>
+        </div>
+      </a>
+      <a href="./comics/" target="_self">
+        <div class="menu_block">
+          <div class="sub_menu"><img src="images/Naturalbadge.png" class="menu_icon_main"></div>
+          <div class="sub_menu_text_main">Comics<br />Archive</div>
+        </div>
+      </a>
+      <a href="./story_bible/" target="_self">
+        <div class="menu_block">
+          <div class="sub_menu"><img src="images/MagicOriginIcon.png" class="menu_icon_main"></div>
+          <div class="sub_menu_text_main">Story<br />Bible</div>
+        </div>
+      </a>
+      <a href="./manuals/" target="_self">
+        <div class="menu_block">
+          <div class="sub_menu"><img src="images/TechnologyOriginIcon.png" class="menu_icon_main"></div>
+          <div class="sub_menu_text_main">Game<br />Manuals</div>
+        </div>
+      </a>
+      <a href="./tools/" target="_self">
+        <div class="menu_block">
+          <div class="sub_menu"><img src="images/ScienceOriginIcon.png" class="menu_icon_main"></div>
+          <div class="sub_menu_text_main" style="padding-top:0px;">Character<br />Tools</div>
+        </div>
+      </a>
+      <a href="https://paragonwiki.com/wiki/Main_Page" target="_blank">
+        <div class="menu_block">
+          <div class="sub_menu"><img src="images/statesman.png" class="menu_icon_main" id="paragon"></div>
+          <div class="sub_menu_text_main">Paragon<br />Wiki (Archive)</div>
+        </div>
+      </a>
+      <a href="https://forums.homecomingservers.com/" target="_blank">
+        <div class="menu_block">
+          <div class="sub_menu"><img src="images/coh-hc.png" class="menu_icon_main"></div>
+          <div class="sub_menu_text_main">Homecoming<br />Forums</div>
+        </div>
+      </a>
+      <a href="https://play.cityofheroesrebirth.com/" target="_blank">
+        <div class="menu_block">
+          <div class="sub_menu"><img src="images/rebirth.png" class="menu_icon_main"></div>
+          <div class="sub_menu_text_main">Rebirth<br />Server</div>
+        </div>
+      </a>
+      <a href="https://homecoming.wiki/wiki/Main_Page" target="_blank">
+        <div class="menu_block">
+          <div class="sub_menu"><img src="images/coh-hc.png" class="menu_icon_main"></div>
+          <div class="sub_menu_text_main">Homecoming<br />Wiki</div>
+        </div>
+      </a>
 
-      <div class="menu_block" onclick="window.open('./story_bible/','_self')">
-        <div class="sub_menu"><img src="images/MagicOriginIcon.png" class="menu_icon_main"></div>
-        <div class="sub_menu_text_main">Story<br />Bible</div>
-      </div>
+      <a href="https://wiki.cityofheroesrebirth.com" target="_blank">
+        <div class="menu_block">
+          <div class="sub_menu"><img src="images/rebirth.png" class="menu_icon_main"></div>
+          <div class="sub_menu_text_main">Rebirth<br />Wiki</div>
+        </div>
+      </a>
 
-      <div class="menu_block" onclick="window.open('./manuals/','_self')">
-        <div class="sub_menu"><img src="images/TechnologyOriginIcon.png" class="menu_icon_main"></div>
-        <div class="sub_menu_text_main">Game<br />Manuals</div>
-      </div>
-
-      <div class="menu_block" onclick="window.open('./tools/','_self')">
-        <div class="sub_menu"><img src="images/ScienceOriginIcon.png" class="menu_icon_main"></div>
-        <div class="sub_menu_text_main" style="padding-top:0px;">Character<br />Tools</div>
-      </div>
-
-      <div class="menu_block" onclick="window.open('http://city-representative.network/coh/','_blank')">
-        <div class="sub_menu"><img src="images/coh_badge.png" class="menu_icon_main"></div>
-        <div class="sub_menu_text_main">City<br />Representative</div>
-      </div>
-
-      <div class="menu_block" onclick="window.open('https://play.cityofheroesrebirth.com/','_blank')">
-        <div class="sub_menu"><img src="images/rebirth.png" class="menu_icon_main"></div>
-        <div class="sub_menu_text_main">Rebirth<br />Server</div>
-      </div>
-
-      <div class="menu_block" onclick="window.open('https://ourowiki.ouro-comdev.com/','_blank')">
-        <div class="sub_menu"><img src="images/ourodev.png" class="menu_icon_main"></div>
-        <div class="sub_menu_text_main">OuroDev<br />Wiki</div>
-      </div>
-      <div class="menu_block" onclick="window.open('https://wiki.cityofheroesrebirth.com/index.php/Main_Page','_blank')">
-        <div class="sub_menu"><img src="images/rebirth.png" class="menu_icon_main"></div>
-        <div class="sub_menu_text_main">Rebirth<br />Wiki</div>
-      </div>
-
-      <!--
-  <div  class="menu_block" onclick="window.open('http://127.0.0.1/','_blank')">
-    <div class="sub_menu"><img src="images/phoenix.png" class="menu_icon_main"></div>
-    <div class="sub_menu_text_main">Phoenix<br/>Server</div>
-  </div>
--->
     </div>
-    <div class="home_button" onclick="window.open('https://rednet.pw:48512/coh-codex/','_self')"><i class="fas fa-home"></i></div>
+    <a href="../" target="_self">
+      <div class="home_button"><i class="fas fa-home"></i></div>
+    </a>
   </body>
 </html>
