--- a/tools/index.html
+++ b/tools/index.html
@@ -1,113 +1,107 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-<meta charset="utf-8">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="theme-color" content="#004e92">
-<meta name="mobile-web-app-capable" content="yes">
-<meta http-equiv="Cache-control" content="NO-STORE">
-<meta name="robots" content="noindex, nofollow">
-<meta name="mobile-web-app-capable" content="yes">
-<link rel="icon" sizes="72x72" href="images/icons/icon-72x72.png">
-<link rel="icon" sizes="96x96" href="images/icons/icon-96x96.png">
-<link rel="icon" sizes="128x128" href="images/icons/icon-128x128.png">
-<link rel="icon" sizes="144x144" href="images/icons/icon-144x144.png">
-<link rel="icon" sizes="152x152" href="images/icons/icon-152x152.png">
-<link rel="icon" sizes="192x192" href="images/icons/icon-192x192.png">
-<link rel="icon" sizes="384x384" href="images/icons/icon-384x384.png">
-<link rel="icon" sizes="512x512" href="images/icons/icon-512x512.png">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-<title>City of Heroes -  Charcter Tools</title>
-<link rel="stylesheet" type="text/css" href="../codex.css">
-<script language="javascript" type="text/javascript">
-     var images = new Array()
-     var images2 = new Array()
-     var images3 = new Array()
+     <head>
+          <meta charset="utf-8">
+          <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+          <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+          <meta name="theme-color" content="#004e92">
+          <meta name="mobile-web-app-capable" content="yes">
+          <meta http-equiv="Cache-control" content="NO-STORE">
+          <meta name="robots" content="noindex, nofollow">
+          <meta name="mobile-web-app-capable" content="yes">
+          <link rel="icon" sizes="72x72" href="../images/icons/icon-72x72.png">
+          <link rel="icon" sizes="96x96" href="../images/icons/icon-96x96.png">
+          <link rel="icon" sizes="128x128" href="../images/icons/icon-128x128.png">
+          <link rel="icon" sizes="144x144" href="../images/icons/icon-144x144.png">
+          <link rel="icon" sizes="152x152" href="../images/icons/icon-152x152.png">
+          <link rel="icon" sizes="192x192" href="../images/icons/icon-192x192.png">
+          <link rel="icon" sizes="384x384" href="../images/icons/icon-384x384.png">
+          <link rel="icon" sizes="512x512" href="../images/icons/icon-512x512.png">
+          <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+          <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js" integrity="sha512-57oZ/vW8ANMjR/KQ6Be9v/+/h6bq9/l3f0Oc7vn6qMqyhvPd1cvKBRWWpzu0QoneImqr2SkmO4MSqU+RpHom3Q=="
+               crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+          <title>City of Heroes - Charcter Tools</title>
+          <link rel="stylesheet" type="text/css" href="../codex.css">
+          <script language="javascript" type="text/javascript">
+               var images = new Array()
+               var images2 = new Array()
+               var images3 = new Array()
 
-     images[0] = "../images/cov_large.png";
-     images[1] = "../images/coh_gr_large.png";
-     images[2] = "../images/coh_large.png";
-     images2[0] = "../images/city_back_blue.png";
-     images2[1] = "../images/city_back_red.png";
-     images2[2] = "../images/city_back_gr.png";
-     images3[0] = "linear-gradient(#000428, #004e92)";
-     images3[1] = "linear-gradient(#1f1c18, #8e0e00)";
-     images3[2] = "linear-gradient(#333333, #c9ad1c)";
+               images[0] = "../images/cov_large.png";
+               images[1] = "../images/coh_gr_large.png";
+               images[2] = "../images/coh_large.png";
+               images2[0] = "../images/city_back_blue.png";
+               images2[1] = "../images/city_back_red.png";
+               images2[2] = "../images/city_back_gr.png";
+               images3[0] = "linear-gradient(#000428, #004e92)";
+               images3[1] = "linear-gradient(#1f1c18, #8e0e00)";
+               images3[2] = "linear-gradient(#333333, #c9ad1c)";
 
-//     setInterval("changeImage()", 8000);
-//     setInterval("changeImage2()", 8000);
-//     setInterval("changeImage3()", 8000);
+               //     setInterval("changeImage()", 8000);
+               //     setInterval("changeImage2()", 8000);
+               //     setInterval("changeImage3()", 8000);
 
-     var x=0;
+               var x = 0;
 
-     	function changeImage()
-     {
-                document.getElementById("switch").src=images[x]
-                x++;
-		if (images.length == x) 
-                {
+               function changeImage() {
+               document.getElementById("switch").src = images[x]
+               x++;
+               if (images.length == x) {
                     x = 0;
-                }
-     }
-	function changeImage2()
-     {   
-		document.getElementById("switch2").style.backgroundImage = "url("+images2[x]+")";
-		$("#switch2").fadeIn(1600);
-              
-              }
-	function changeImage3()
-     {  
-		$('.tools_display').css("background", images3[x]);
-	     }
-</script>
-<script>
-window.open = cordova.InAppBrowser.open;
+               }
+               }
+               function changeImage2() {
+               document.getElementById("switch2").style.backgroundImage = "url(" + images2[x] + ")";
+               $("#switch2").fadeIn(1600);
 
-document.addEventListener("deviceready", onDeviceReady, false);
-function onDeviceReady() {
-    console.log("window.open works well");
-}
+               }
+               function changeImage3() {
+               $('.tools_display').css("background", images3[x]);
+               }
 
-</script>
-<script>
-function force_change() {
-	changeImage();
-	changeImage2();
-	changeImage3();
-}
-</script>
- 
-</head>
+               function force_change() {
+               changeImage();
+               changeImage2();
+               changeImage3();
+               }
+     </script>
 
-<body id="switch2">
-<div class="main_title" onclick="force_change();" ><img src="../images/coh_large.png" width="256" height="256" id="switch"></div>
-<div class="sub_title"><img src="../images/codex.png" width="200" height="45"></div>
-<br/>
-<br/>
-<hr/>
-<div class="page_header" onclick="location.reload();">Character Tools</div>
-<hr/>
-<br/>
-<div class="body_display">
+     </head>
 
-<div class="tools_display" onclick="window.open('https://coh.rednet.dev/tools/hero_designer.zip','_system');">
-  <div class="sub_menu"><img src="../images/statesman.png" class="display_box_tool"></div>
-  <div class="sub_menu_text_tools">Hero Designer<br/><div class="sub_text">(Download 9.0MB)</div></div>
-</div>
+     <body id="switch2">
+          <div class="main_title" onclick="force_change();"><img src="../images/coh_large.png" width="256" height="256" id="switch"></div>
+          <div class="sub_title"><img src="../images/codex.png" width="200" height="45"></div>
+          <br />
+          <br />
+          <hr />
+          <div class="page_header" onclick="location.reload();">Character Tools</div>
+          <hr />
+          <br />
+          <div class="body_display">
+               <div class="tools_display" onclick="window.open('../enhancements/index.html','_self')">
+                    <div class="sub_menu"><img src="../enhancements/images/training/TO-Training-Heal.png" class="display_box_tool"></div>
+                    <div class="sub_menu_text_tools">Enhancements</div>
+               </div>
+               <a href="https://midsreborn.com/" target="_blank">
+                    <div class="tools_display">
+                         <div class="sub_menu"><img src="../images/statesman.png" class="display_box_tool"></div>
+                         <div class="sub_menu_text_tools">MIDS Reborn</div>
+                    </div>
+               </a>
+               <a href="https://mods.cityofheroes.dev/" target="_blank">
+                    <div class="tools_display">
+                         <div class="sub_menu"><img src="../images/Mutationbadge.png" class="display_box_tool"></div>
+                         <div class="sub_menu_text_tools">MOD Installer</div>
+                    </div>
+               </a>
 
-<div class="tools_display" onclick="window.open('../enhancements/index.html','_self')">
-  <div class="sub_menu"><img src="../enhancements/images/training/TO-Training-Heal.png" class="display_box_tool"></div>
-  <div class="sub_menu_text_tools">Enhancements</div>
-</div>
+          </div>
 
-</div>
-
-</div>
-
-<div class="home_button" onclick="window.open('https://rednet.pw:48512/coh-codex/','_self')"><i class="fas fa-home"></i></div>
+          <a href="../" target="_self">
+               <div class="home_button"><i class="fas fa-home"></i></div>
+             </a>
 
 
-</body>
+     </body>
 </html>
