--- a/manuals/index.html
+++ b/manuals/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-<meta charset="utf-8">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="theme-color" content="#004e92">
-<meta name="mobile-web-app-capable" content="yes">
-<meta http-equiv="Cache-control" content="NO-STORE">
-<meta name="robots" content="noindex, nofollow">
-<meta name="mobile-web-app-capable" content="yes">
-<link rel="icon" sizes="72x72" href="images/icons/icon-72x72.png">
-<link rel="icon" sizes="96x96" href="images/icons/icon-96x96.png">
-<link rel="icon" sizes="128x128" href="images/icons/icon-128x128.png">
-<link rel="icon" sizes="144x144" href="images/icons/icon-144x144.png">
-<link rel="icon" sizes="152x152" href="images/icons/icon-152x152.png">
-<link rel="icon" sizes="192x192" href="images/icons/icon-192x192.png">
-<link rel="icon" sizes="384x384" href="images/icons/icon-384x384.png">
-<link rel="icon" sizes="512x512" href="images/icons/icon-512x512.png">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-<script language="javascript" type="text/javascript">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="theme-color" content="#004e92">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta http-equiv="Cache-control" content="NO-STORE">
+    <meta name="robots" content="noindex, nofollow">
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="icon" sizes="72x72" href="../images/icons/icon-72x72.png">
+    <link rel="icon" sizes="96x96" href="../images/icons/icon-96x96.png">
+    <link rel="icon" sizes="128x128" href="../images/icons/icon-128x128.png">
+    <link rel="icon" sizes="144x144" href="../images/icons/icon-144x144.png">
+    <link rel="icon" sizes="152x152" href="../images/icons/icon-152x152.png">
+    <link rel="icon" sizes="192x192" href="../images/icons/icon-192x192.png">
+    <link rel="icon" sizes="384x384" href="../images/icons/icon-384x384.png">
+    <link rel="icon" sizes="512x512" href="../images/icons/icon-512x512.png">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+      integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"
+      integrity="sha512-57oZ/vW8ANMjR/KQ6Be9v/+/h6bq9/l3f0Oc7vn6qMqyhvPd1cvKBRWWpzu0QoneImqr2SkmO4MSqU+RpHom3Q=="
+      crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script language="javascript" type="text/javascript">
      var images = new Array()
      var images2 = new Array()
      var images3 = new Array()
@@ -60,51 +64,52 @@
 		$('.menu_block_display').css("background", images3[x]);
 	     }
 </script>
-<script>
+    <script>
 function force_change() {
 	changeImage();
 	changeImage2();
 	changeImage3();
 }
 </script>
- 
-<title>City of Heroes -  Manuals</title>
-<link rel="stylesheet" type="text/css" href="../codex.css">
-</head>
 
-<body id="switch2">
-<div class="main_title" onclick="force_change();" ><img src="../images/coh_large.png" width="256" height="256" id="switch"></div>
-<div class="sub_title"><img src="../images/codex.png" width="200" height="45"></div>
-<br/>
-<br/>
-<hr/>
-<div class="page_header" onclick="location.reload();">Game Manuals</div>
-<hr/>
-<br/>
+    <title>City of Heroes - Manuals</title>
+    <link rel="stylesheet" type="text/css" href="../codex.css">
+  </head>
 
-<br/>
-<div class="body_display">
- 
-<div class="menu_block_display" onclick="window.open('./CoH_Manual.pdf','_blank')">
-  <div class="sub_menu"><img src="./manual.jpg" class="display_box"></div>
-  <div class="sub_menu_text">City of Heroes</div>
-</div>
-<div class="menu_block_display" onclick="window.open('./CoV_Manual.pdf','_blank')">
-  <div class="sub_menu"><img src="./manual_cover.jpg" class="display_box"></div>
-  <div class="sub_menu_text">City of Villans</div>
-</div>
-<div class="menu_block_display" onclick="window.open('./City_of_Heroes_RPG_Quickplay_Pack.pdf','_blank')">
-  <div class="sub_menu"><img src="./coh_rpg.png" class="display_box"></div>
-  <div class="sub_menu_text">City of Heroes RPG</div>
-</div>
-<div class="menu_block_display" onclick="window.open('./coh_ccg.pdf','_blank')">
-  <div class="sub_menu"><img src="./picCity_of_Heroes_CCG.png" class="display_box"></div>
-  <div class="sub_menu_text">City of Heroes CCG</div>
-</div>
-	
+  <body id="switch2">
+    <div class="main_title" onclick="force_change();"><img src="../images/coh_large.png" width="256" height="256" id="switch"></div>
+    <div class="sub_title"><img src="../images/codex.png" width="200" height="45"></div>
+    <br />
+    <br />
+    <hr />
+    <div class="page_header" onclick="location.reload();">Game Manuals</div>
+    <hr />
+    <br />
 
-</div>
-<div class="home_button" onclick="window.open('https://rednet.pw:48512/coh-codex/','_self')"><i class="fas fa-home"></i></div>
+    <br />
+    <div class="body_display">
 
-</body>
+      <div class="menu_block_display" onclick="window.open('./CoH_Manual.pdf','_blank')">
+        <div class="sub_menu"><img src="./manual.jpg" class="display_box"></div>
+        <div class="sub_menu_text">City of Heroes</div>
+      </div>
+      <div class="menu_block_display" onclick="window.open('./CoV_Manual.pdf','_blank')">
+        <div class="sub_menu"><img src="./manual_cover.jpg" class="display_box"></div>
+        <div class="sub_menu_text">City of Villans</div>
+      </div>
+      <div class="menu_block_display" onclick="window.open('./City_of_Heroes_RPG_Quickplay_Pack.pdf','_blank')">
+        <div class="sub_menu"><img src="./coh_rpg.png" class="display_box"></div>
+        <div class="sub_menu_text">City of Heroes RPG</div>
+      </div>
+      <div class="menu_block_display" onclick="window.open('./coh_ccg.pdf','_blank')">
+        <div class="sub_menu"><img src="./picCity_of_Heroes_CCG.png" class="display_box"></div>
+        <div class="sub_menu_text">City of Heroes CCG</div>
+      </div>
+
+    </div>
+    <a href="../" target="_self">
+      <div class="home_button"><i class="fas fa-home"></i></div>
+    </a>
+
+  </body>
 </html>
