modified index.html added discord.png

--- a/index.html
+++ b/index.html
@@ -150,13 +150,13 @@ window.onload=function(){
       <a href="https://forums.homecomingservers.com/" target="_blank">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/coh-hc.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">Homecoming<br />Forums</div>
+          <div class="sub_menu_text_main">City of Heroes <br/>Homecoming</div>
         </div>
       </a>
       <a href="https://play.cityofheroesrebirth.com/" target="_blank">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/rebirth.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">Rebirth<br />Server</div>
+          <div class="sub_menu_text_main">City of Heroes <br/>Rebirth</div>
         </div>
       </a>
       <a href="https://homecoming.wiki/wiki/Main_Page" target="_blank">
@@ -170,6 +170,21 @@ window.onload=function(){
         <div class="menu_block">
           <div class="sub_menu"><img src="images/rebirth.png" class="menu_icon_main"></div>
           <div class="sub_menu_text_main">Rebirth<br />Wiki</div>
+        </div>
+      </a>
+
+
+      <a href="https://discord.com/invite/cityofheroes" target="_blank">
+        <div class="menu_block">
+          <div class="sub_menu"><img src="images/coh-hc.png" class="menu_icon_main"></div>
+          <div class="sub_menu_text_main">Homecoming<br />Discord</div>
+        </div>
+      </a>
+
+      <a href="https://discord.com/invite/5ekPSuJU" target="_blank">
+        <div class="menu_block">
+          <div class="sub_menu"><img src="images/rebirth.png" class="menu_icon_main"></div>
+          <div class="sub_menu_text_main">Rebirth<br />Discord</div>
         </div>
       </a>
 
