--- a/rebirth/index.html
+++ b/rebirth/index.html
@@ -8,8 +8,8 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta http-equiv="Cache-control" content="NO-STORE">
     <meta name="robots" content="noindex, nofollow">
-    <link rel="manifest" href="manifest.json">
     <title>City of Heroes - Codex</title>
+    <link rel="manifest" href="manifest.json">
     <link rel="icon" sizes="72x72" href="images/icons/icon-72x72.png">
     <link rel="icon" sizes="96x96" href="images/icons/icon-96x96.png">
     <link rel="icon" sizes="128x128" href="images/icons/icon-128x128.png">
@@ -108,52 +108,28 @@ window.onload=function(){
 
     <div class="main_block">
 
-      <a href="./cohmaps/" target="_self">
-        <div class="menu_block">
-          <div class="sub_menu"><img src="images/Mutationbadge.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">Paragon<br />City Maps</div>
-        </div>
-      </a>
-      <a href="./comics/" target="_self">
-        <div class="menu_block">
-          <div class="sub_menu"><img src="images/Naturalbadge.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">Comics<br />Archive</div>
-        </div>
-      </a>
-      <a href="./story_bible/" target="_self">
-        <div class="menu_block">
-          <div class="sub_menu"><img src="images/MagicOriginIcon.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">Story<br />Bible</div>
-        </div>
-      </a>
-      <a href="./manuals/" target="_self">
-        <div class="menu_block">
-          <div class="sub_menu"><img src="images/TechnologyOriginIcon.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">Game<br />Manuals</div>
-        </div>
-      </a>
-      <a href="./tools/" target="_self">
-        <div class="menu_block">
-          <div class="sub_menu"><img src="images/ScienceOriginIcon.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main" style="padding-top:0px;">Character<br />Tools</div>
-        </div>
-      </a>
-      <a href="https://paragonwiki.com/wiki/Main_Page" target="_blank">
-        <div class="menu_block">
-          <div class="sub_menu"><img src="images/statesman.png" class="menu_icon_main" id="paragon"></div>
-          <div class="sub_menu_text_main">Paragon<br />Wiki (Archive)</div>
-        </div>
-      </a>
-      <a href="./homecoming/" target="_self">
-        <div class="menu_block">
-          <div class="sub_menu"><img src="images/coh-hc.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">City of Heroes <br />Homecoming</div>
-        </div>
-      </a>
-      <a href="./rebirth/" target="_self">
+      <a href="https://play.cityofheroesrebirth.com/" target="_blank">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/rebirth.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">City of Heroes <br />Rebirth</div>
+          <div class="sub_menu_text_main">Rebirth<br />Website</div>
+        </div>
+      </a>
+      <a href="https://forum.cityofheroesrebirth.com/" target="_blank">
+        <div class="menu_block">
+          <div class="sub_menu"><img src="images/rebirth.png" class="menu_icon_main"></div>
+          <div class="sub_menu_text_main">Rebirth<br />Forums</div>
+        </div>
+      </a>
+      <a href="https://wiki.cityofheroesrebirth.com" target="_blank">
+        <div class="menu_block">
+          <div class="sub_menu"><img src="images/rebirth.png" class="menu_icon_main"></div>
+          <div class="sub_menu_text_main">Rebirth<br />Wiki</div>
+        </div>
+      </a>
+      <a href="https://discord.com/invite/5ekPSuJU" target="_blank">
+        <div class="menu_block">
+          <div class="sub_menu"><img src="images/rebirth.png" class="menu_icon_main"></div>
+          <div class="sub_menu_text_main">Rebirth<br />Discord</div>
         </div>
       </a>
 
