--- a/story_bible/index.html
+++ b/story_bible/index.html
@@ -193,7 +193,7 @@ function force_change() {
 
       <div class="sb_display" onclick="window.open('./Lore/plaques_badges.pdf','_blank')">
         <div class="sub_menu"><img src="../images/coh_badge.png" class="display_box_sb"></div>
-        <div class="sub_menu_text_sb">Paragon City<br />Plaques & Badges</div>
+        <div class="sub_menu_text_sb">Paragon City<br />Plaques &amp; Badges</div>
       </div>
 
       <div class="sb_display" onclick="window.open('./Lore/Orion-Majestic.pdf','_blank')">
