--- a/homecoming/index.html
+++ b/homecoming/index.html
@@ -107,53 +107,24 @@ window.onload=function(){
     <br />
 
     <div class="main_block">
-
-      <a href="./cohmaps/" target="_self">
-        <div class="menu_block">
-          <div class="sub_menu"><img src="images/Mutationbadge.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">Paragon<br />City Maps</div>
-        </div>
-      </a>
-      <a href="./comics/" target="_self">
-        <div class="menu_block">
-          <div class="sub_menu"><img src="images/Naturalbadge.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">Comics<br />Archive</div>
-        </div>
-      </a>
-      <a href="./story_bible/" target="_self">
-        <div class="menu_block">
-          <div class="sub_menu"><img src="images/MagicOriginIcon.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">Story<br />Bible</div>
-        </div>
-      </a>
-      <a href="./manuals/" target="_self">
-        <div class="menu_block">
-          <div class="sub_menu"><img src="images/TechnologyOriginIcon.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">Game<br />Manuals</div>
-        </div>
-      </a>
-      <a href="./tools/" target="_self">
-        <div class="menu_block">
-          <div class="sub_menu"><img src="images/ScienceOriginIcon.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main" style="padding-top:0px;">Character<br />Tools</div>
-        </div>
-      </a>
-      <a href="https://paragonwiki.com/wiki/Main_Page" target="_blank">
-        <div class="menu_block">
-          <div class="sub_menu"><img src="images/statesman.png" class="menu_icon_main" id="paragon"></div>
-          <div class="sub_menu_text_main">Paragon<br />Wiki (Archive)</div>
-        </div>
-      </a>
-      <a href="./homecoming/" target="_self">
+      <a href="https://forums.homecomingservers.com/" target="_blank">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/coh-hc.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">City of Heroes <br />Homecoming</div>
+          <div class="sub_menu_text_main">Homecoming <br />Forums</div>
         </div>
       </a>
-      <a href="./rebirth/" target="_self">
+
+      <a href="https://homecoming.wiki/wiki/Main_Page" target="_blank">
         <div class="menu_block">
-          <div class="sub_menu"><img src="images/rebirth.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">City of Heroes <br />Rebirth</div>
+          <div class="sub_menu"><img src="images/coh-hc.png" class="menu_icon_main"></div>
+          <div class="sub_menu_text_main">Homecoming<br />Wiki</div>
+        </div>
+      </a>
+
+      <a href="https://discord.com/invite/cityofheroes" target="_blank">
+        <div class="menu_block">
+          <div class="sub_menu"><img src="images/coh-hc.png" class="menu_icon_main"></div>
+          <div class="sub_menu_text_main">Homecoming<br />Discord</div>
         </div>
       </a>
 
