--- a/tools/index.html
+++ b/tools/index.html
@@ -9,6 +9,7 @@
           <meta http-equiv="Cache-control" content="NO-STORE">
           <meta name="robots" content="noindex, nofollow">
           <meta name="mobile-web-app-capable" content="yes">
+          <title>City of Heroes - Codex</title>
           <link rel="icon" sizes="72x72" href="../images/icons/icon-72x72.png">
           <link rel="icon" sizes="96x96" href="../images/icons/icon-96x96.png">
           <link rel="icon" sizes="128x128" href="../images/icons/icon-128x128.png">
