--- a/homecoming/index.html
+++ b/homecoming/index.html
@@ -10,14 +10,16 @@
     <meta name="robots" content="noindex, nofollow">
     <link rel="manifest" href="manifest.json">
     <title>City of Heroes - Codex</title>
-    <link rel="icon" sizes="72x72" href="images/icons/icon-72x72.png">
-    <link rel="icon" sizes="96x96" href="images/icons/icon-96x96.png">
-    <link rel="icon" sizes="128x128" href="images/icons/icon-128x128.png">
-    <link rel="icon" sizes="144x144" href="images/icons/icon-144x144.png">
-    <link rel="icon" sizes="152x152" href="images/icons/icon-152x152.png">
-    <link rel="icon" sizes="192x192" href="images/icons/icon-192x192.png">
-    <link rel="icon" sizes="384x384" href="images/icons/icon-384x384.png">
-    <link rel="icon" sizes="512x512" href="images/icons/icon-512x512.png">
+    <link rel="manifest" href="manifest.json">
+    <link rel="icon" sizes="72x72" href="../images/icons/icon-72x72.png">
+    <link rel="icon" sizes="96x96" href="../images/icons/icon-96x96.png">
+    <link rel="icon" sizes="128x128" href="../images/icons/icon-128x128.png">
+    <link rel="icon" sizes="144x144" href="../images/icons/icon-144x144.png">
+    <link rel="icon" sizes="152x152" href="../images/icons/icon-152x152.png">
+    <link rel="icon" sizes="192x192" href="../images/icons/icon-192x192.png">
+    <link rel="icon" sizes="384x384" href="../images/icons/icon-384x384.png">
+    <link rel="icon" sizes="512x512" href="../images/icons/icon-512x512.png">
+    <link rel="stylesheet" type="text/css" href="../codex.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
       integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
