modified index.html and index.html

--- a/rebirth/index.html
+++ b/rebirth/index.html
@@ -97,7 +97,7 @@ window.onload=function(){
   </head>
   <body id="switch2">
     <div class="main_title" onclick="force_change();"><img src="./images/coh_large.png" width="256" height="256" id="switch"></div>
-    <div class="sub_title"><img src="./images/codex.png" width="200" height="45"></div>
+    <div class="sub_title"><img src="../images/codex.png" width="200" height="45"></div>
     <br />
     <br />
     <hr />
@@ -111,19 +111,19 @@ window.onload=function(){
 
       <a href="https://play.cityofheroesrebirth.com/" target="_blank">
         <div class="menu_block">
-          <div class="sub_menu"><img src="images/rebirth.png" class="menu_icon_main"></div>
+          <div class="sub_menu"><img src="../images/rebirth.png" class="menu_icon_main"></div>
           <div class="sub_menu_text_main">Rebirth<br />Website</div>
         </div>
       </a>
       <a href="https://forum.cityofheroesrebirth.com/" target="_blank">
         <div class="menu_block">
-          <div class="sub_menu"><img src="images/rebirth.png" class="menu_icon_main"></div>
+          <div class="sub_menu"><img src="../images/rebirth.png" class="menu_icon_main"></div>
           <div class="sub_menu_text_main">Rebirth<br />Forums</div>
         </div>
       </a>
       <a href="https://wiki.cityofheroesrebirth.com" target="_blank">
         <div class="menu_block">
-          <div class="sub_menu"><img src="images/rebirth.png" class="menu_icon_main"></div>
+          <div class="sub_menu"><img src="../images/rebirth.png" class="menu_icon_main"></div>
           <div class="sub_menu_text_main">Rebirth<br />Wiki</div>
         </div>
       </a>
