--- a/homecoming/index.html
+++ b/homecoming/index.html
@@ -98,7 +98,7 @@ window.onload=function(){
   </head>
   <body id="switch2">
     <div class="main_title" onclick="force_change();"><img src="./images/coh_large.png" width="256" height="256" id="switch"></div>
-    <div class="sub_title"><img src="./images/codex.png" width="200" height="45"></div>
+    <div class="sub_title"><img src="../images/codex.png" width="200" height="45"></div>
     <br />
     <br />
     <hr />
@@ -111,21 +111,21 @@ window.onload=function(){
     <div class="main_block">
       <a href="https://forums.homecomingservers.com/" target="_blank">
         <div class="menu_block">
-          <div class="sub_menu"><img src="images/coh-hc.png" class="menu_icon_main"></div>
+          <div class="sub_menu"><img src="../images/coh-hc.png" class="menu_icon_main"></div>
           <div class="sub_menu_text_main">Homecoming <br />Forums</div>
         </div>
       </a>
 
       <a href="https://homecoming.wiki/wiki/Main_Page" target="_blank">
         <div class="menu_block">
-          <div class="sub_menu"><img src="images/coh-hc.png" class="menu_icon_main"></div>
+          <div class="sub_menu"><img src="../images/coh-hc.png" class="menu_icon_main"></div>
           <div class="sub_menu_text_main">Homecoming<br />Wiki</div>
         </div>
       </a>
 
       <a href="https://discord.com/invite/cityofheroes" target="_blank">
         <div class="menu_block">
-          <div class="sub_menu"><img src="images/coh-hc.png" class="menu_icon_main"></div>
+          <div class="sub_menu"><img src="../images/coh-hc.png" class="menu_icon_main"></div>
           <div class="sub_menu_text_main">Homecoming<br />Discord</div>
         </div>
       </a>
