--- a/homecoming/index.html
+++ b/homecoming/index.html
@@ -8,7 +8,6 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta http-equiv="Cache-control" content="NO-STORE">
     <meta name="robots" content="noindex, nofollow">
-    <link rel="manifest" href="manifest.json">
     <title>City of Heroes - Codex</title>
     <link rel="manifest" href="manifest.json">
     <link rel="icon" sizes="72x72" href="../images/icons/icon-72x72.png">
@@ -87,17 +86,9 @@ function force_change() {
 	changeImage3();
 }
 </script>
-    <!-- <script type="text/javascript">
-window.onload=function(){
-    document.getElementById("my_audio").play();
-  }
-</script> -->
-
-    <title>City of Heroes - Codex</title>
-    <link rel="stylesheet" type="text/css" href="codex.css">
   </head>
   <body id="switch2">
-    <div class="main_title" onclick="force_change();"><img src="./images/coh_large.png" width="256" height="256" id="switch"></div>
+    <div class="main_title" onclick="force_change();"><img src="../images/coh_large.png" width="256" height="256" id="switch"></div>
     <div class="sub_title"><img src="../images/codex.png" width="200" height="45"></div>
     <br />
     <br />
