--- a/rebirth/index.html
+++ b/rebirth/index.html
@@ -86,17 +86,10 @@ function force_change() {
 	changeImage3();
 }
 </script>
-    <!-- <script type="text/javascript">
-window.onload=function(){
-    document.getElementById("my_audio").play();
-  }
-</script> -->
 
-    <title>City of Heroes - Codex</title>
-    <link rel="stylesheet" type="text/css" href="codex.css">
   </head>
   <body id="switch2">
-    <div class="main_title" onclick="force_change();"><img src="./images/coh_large.png" width="256" height="256" id="switch"></div>
+    <div class="main_title" onclick="force_change();"><img src="../images/coh_large.png" width="256" height="256" id="switch"></div>
     <div class="sub_title"><img src="../images/codex.png" width="200" height="45"></div>
     <br />
     <br />
