modified index.html and index.html

--- a/rebirth/index.html
+++ b/rebirth/index.html
@@ -94,7 +94,7 @@ function force_change() {
     <br />
     <br />
     <hr />
-    <div class="page_header" onclick="location.reload();">Main Menu</div>
+    <div class="page_header" onclick="location.reload();">Rebirth</div>
     <hr />
     <br />
 
