--- a/homecoming/index.html
+++ b/homecoming/index.html
@@ -93,7 +93,7 @@ function force_change() {
     <br />
     <br />
     <hr />
-    <div class="page_header" onclick="location.reload();">Main Menu</div>
+    <div class="page_header" onclick="location.reload();">Homecoming</div>
     <hr />
     <br />
 
