modified index.html in rebirth

--- a/rebirth/index.html
+++ b/rebirth/index.html
@@ -122,7 +122,7 @@ function force_change() {
       </a>
       <a href="https://discord.com/invite/5ekPSuJU" target="_blank">
         <div class="menu_block">
-          <div class="sub_menu"><img src="images/rebirth.png" class="menu_icon_main"></div>
+          <div class="sub_menu"><img src="../images/rebirth.png" class="menu_icon_main"></div>
           <div class="sub_menu_text_main">Rebirth<br />Discord</div>
         </div>
       </a>
