modified index.html in tools

--- a/tools/index.html
+++ b/tools/index.html
@@ -84,6 +84,12 @@
                     <div class="sub_menu"><img src="../enhancements/images/training/TO-Training-Heal.png" class="display_box_tool"></div>
                     <div class="sub_menu_text_tools">Enhancements</div>
                </div>
+               <a href="https://cod.uberguy.net/" target="_blank">
+                    <div class="tools_display">
+                         <div class="sub_menu"><img src="../images/Naturalbadge.png" class="display_box_tool"></div>
+                         <div class="sub_menu_text_tools">City of Data</div>
+                    </div>
+               </a>
                <a href="https://midsreborn.com/" target="_blank">
                     <div class="tools_display">
                          <div class="sub_menu"><img src="../images/statesman.png" class="display_box_tool"></div>
@@ -96,13 +102,10 @@
                          <div class="sub_menu_text_tools">MOD Installer</div>
                     </div>
                </a>
-
           </div>
-
           <a href="../" target="_self">
                <div class="home_button"><i class="fas fa-home"></i></div>
-             </a>
-
+          </a>
 
      </body>
 </html>
