modified index.html in enhancements

--- a/enhancements/index.html
+++ b/enhancements/index.html
@@ -718,7 +718,7 @@
           <div class="enhance_text">Molecular Bonding
             Entangle Boost</div>
         </div>
-        <div class="enhance_display intangibility" value="enome Alteration Phase Boost"><img src="./images/dual_origin/DO-Mutation-Science-Intangibility-Duration.png">
+        <div class="enhance_display intangibility" value="Genome Alteration Phase Boost"><img src="./images/dual_origin/DO-Mutation-Science-Intangibility-Duration.png">
           <div class="enhance_text">Genome Alteration
             Phase Boost</div>
         </div>
@@ -726,7 +726,7 @@
           <div class="enhance_text">Molecular Bonding Time
             Manipulation Boost</div>
         </div>
-        <div class="enhance_display jump" value="olecular Bonding Jump Boost"><img src="./images/dual_origin/DO-Mutation-Science-Jump.png">
+        <div class="enhance_display jump" value="Molecular Bonding Jump Boost"><img src="./images/dual_origin/DO-Mutation-Science-Jump.png">
           <div class="enhance_text">Molecular Bonding
             Jump Boost</div>
         </div>
