--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
      var images2 = new Array()
      var images3 = new Array()
 
-     images[0] = "./images/cov_large.png";
-     images[1] = "./images/coh_gr_large.png";
-     images[2] = "./images/coh_large.png";
-     images2[0] = "./images/city_back_blue.png";
-     images2[1] = "./images/city_back_red.png";
-     images2[2] = "./images/city_back_gr.png";
-     images3[0] = "linear-gradient(#000428, #004e92)";
-     images3[1] = "linear-gradient(#1f1c18, #8e0e00)";
-     images3[2] = "linear-gradient(#333333, #c9ad1c)";
+      images[0] = "../images/cov_large.png";
+      images[1] = "../images/coh_gr_large.png";
+      images[2] = "../images/coh_large.png";
+      images2[0] = "../images/city_back_blue.png";
+      images2[1] = "../images/city_back_red.png";
+      images2[2] = "../images/city_back_gr.png";
+      images3[0] = "linear-gradient(#000428, #004e92)";
+      images3[1] = "linear-gradient(#1f1c18, #8e0e00)";
+      images3[2] = "linear-gradient(#333333, #c9ad1c)";
 
 //     setInterval("changeImage()", 8000);
 //     setInterval("changeImage2()", 8000);
