--- a/enhancements/index.html
+++ b/enhancements/index.html
@@ -65,20 +65,20 @@
                  }
         function changeImage3()
         {  
-             $('.menu_block').css("background", images3[x]);
-             if ( x == 1 ) 
-                   {
-                       document.getElementById("paragon").src='images/arachnos.png';
-                   }
-             if ( x == 0 ) 
-                   {
-                       document.getElementById("paragon").src='images/statesman.png';
-                   }
-             if ( x == 2 ) 
-                   {
-                       document.getElementById("paragon").src='images/Praetoria_Icon_Web.png';	 
-                   }
-        }
+		$('.menu_block').css("background", images3[x]);
+		if ( x == 1 ) 
+                {
+                    document.getElementById("paragon").src='../images/arachnos.png';
+                }
+		if ( x == 0 ) 
+                {
+                    document.getElementById("paragon").src='../images/statesman.png';
+                }
+		if ( x == 2 ) 
+                {
+                    document.getElementById("paragon").src='../images/Praetoria_Icon_Web.png';	 
+                }
+     }
    </script>
     <script>
    function force_change() {
