--- a/rebirth/index.html
+++ b/rebirth/index.html
@@ -63,19 +63,19 @@
               
               }
 	function changeImage3()
-     {  
+  {  
 		$('.menu_block').css("background", images3[x]);
 		if ( x == 1 ) 
                 {
-                    document.getElementById("paragon").src='images/arachnos.png';
+                    document.getElementById("paragon").src='../images/arachnos.png';
                 }
 		if ( x == 0 ) 
                 {
-                    document.getElementById("paragon").src='images/statesman.png';
+                    document.getElementById("paragon").src='../images/statesman.png';
                 }
 		if ( x == 2 ) 
                 {
-                    document.getElementById("paragon").src='images/Praetoria_Icon_Web.png';	 
+                    document.getElementById("paragon").src='../images/Praetoria_Icon_Web.png';	 
                 }
      }
 </script>
