modified index.html in enhancements

--- a/enhancements/index.html
+++ b/enhancements/index.html
@@ -79,7 +79,7 @@
                 }
      }
 </script>
-    <script>
+<script>
 function force_change() {
 	changeImage();
 	changeImage2();
@@ -98,7 +98,7 @@ function force_change() {
     </script>
   </head>
 
-  <body class="switch2 enhance_body">
+  <body id="switch2" class="enhance_body">
     <div class="main_title" onclick="force_change();"><img src="../images/coh_large.png" width="256" height="256 switch"></div>
     <div class="sub_title"><img src="../images/codex.png" width="200" height="45"></div>
 
