--- a/comics/index.html
+++ b/comics/index.html
@@ -64,7 +64,7 @@
                }
       function changeImage3()
       {  
-  $('.menu_block').css("background", images3[x]);
+  $('.comic_display').css("background", images3[x]);
   if ( x == 1 ) 
               {
                   document.getElementById("paragon").src='../images/arachnos.png';
