--- a/enhancements/index.html
+++ b/enhancements/index.html
@@ -64,7 +64,7 @@
               }
 	function changeImage3()
   {  
-		$('.menu_block').css("background", images3[x]);
+		$('.enhance_display_menu').css("background", images3[x]);
 		if ( x == 1 ) 
                 {
                     document.getElementById("paragon").src='../images/arachnos.png';
