--- a/tools/index.html
+++ b/tools/index.html
@@ -62,7 +62,7 @@
                              }
                     function changeImage3()
                                    {  
-                         $('.menu_block').css("background", images3[x]);
+                         $('.tools_display').css("background", images3[x]);
                          if ( x == 1 ) 
                               {
                                    document.getElementById("paragon").src='../images/arachnos.png';
