modified index.html in tools

--- a/tools/index.html
+++ b/tools/index.html
@@ -97,7 +97,7 @@
           <hr />
           <br />
           <div class="body_display">
-               <div class="tools_display" onclick="window.open('../enhancements/index.html','_self')">
+               <div class="tools_display" onclick="window.open('../enhancements/index.php','_self')">
                     <div class="sub_menu"><img src="../enhancements/images/training/TO-Training-Heal.png" class="display_box_tool"></div>
                     <div class="sub_menu_text_tools" style="margin-top:-10px">Training/DO/SO<br/>Enhancements</div>
                </div>
