modified index.html in .

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ function force_change() {
           <div class="sub_menu"><img src="images/ScienceOriginIcon.png" class="menu_icon_main"></div>
           <div class="sub_menu_text_main" style="padding-top:0px;">Character<br />Tools</div>
         </div>
-        
+
       <a href="./comics/" target="_self">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/Naturalbadge.png" class="menu_icon_main"></div>
@@ -149,13 +149,13 @@ function force_change() {
       <a href="../homecoming/" target="_self">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/coh-hc.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">City of Heroes <br />Homecoming</div>
+          <div class="sub_menu_text_main">City of Heroes <br /><small>Homecoming</small></div>
         </div>
       </a>
       <a href="./rebirth/" target="_self">
         <div class="menu_block">
           <div class="sub_menu"><img src="images/rebirth.png" class="menu_icon_main"></div>
-          <div class="sub_menu_text_main">City of Heroes <br />Rebirth</div>
+          <div class="sub_menu_text_main">City of Heroes <br /><small>Rebirth</small></div>
         </div>
       </a>
 
