modified codex.css and index.html

--- a/homecoming/index.html
+++ b/homecoming/index.html
@@ -99,7 +99,7 @@ function force_change() {
 
     <br />
 
-    <div class="main_block">
+    <div class="body_display">
       <a href="https://forums.homecomingservers.com/" target="_blank">
         <div class="menu_block">
           <div class="sub_menu"><img src="../images/coh-hc.png" class="menu_icon_main"></div>
