modified index.html in story_bible

--- a/story_bible/index.html
+++ b/story_bible/index.html
@@ -183,7 +183,7 @@ function force_change() {
 
       <div class="sb_display" onclick="window.open('./Zone/peregrine-rikti.pdf','_blank')">
         <div class="sub_menu"><img src="../images/zone.png" class="display_box_sb"></div>
-        <div class="sub_menu_text_sb">Peregrine Island<br /><hr class="sb_hr" />Rikti Crash Site</div>
+        <div class="sub_menu_text_sb">Peregrine Island<br /><hr/>Rikti Crash Site</div>
       </div>
 
     </div>
