--- a/homecoming/index.html
+++ b/homecoming/index.html
@@ -122,7 +122,7 @@ function force_change() {
 
     </div>
     <a href="../" target="_self">
-      <div class="home_button"><i class="fas fa-home"></i></div>
-    </a>
+      <div class="btn btn-primary home_button"><i class="fas fa-home"></i></div>
+  </a>
   </body>
 </html>
