--- a/comics/index.html
+++ b/comics/index.html
@@ -319,8 +319,8 @@
 
     </div>
     <a href="../" target="_self">
-      <div class="home_button"><i class="fas fa-home"></i></div>
-    </a>
+      <div class="btn btn-primary home_button"><i class="fas fa-home"></i></div>
+  </a>
 
   </body>
 </html>
