--- a/story_bible/index.html
+++ b/story_bible/index.html
@@ -204,8 +204,8 @@ function force_change() {
 
     </div>
     <a href="../" target="_self">
-      <div class="home_button"><i class="fas fa-home"></i></div>
-    </a>
+      <div class="btn btn-primary home_button"><i class="fas fa-home"></i></div>
+  </a>
 
   </body>
 </html>
