modified index.php and index.html

--- a/tools/index.html
+++ b/tools/index.html
@@ -103,7 +103,7 @@
           <div class="body_display">
                <div class="tools_display" onclick="window.open('../enhancements/index.php','_self')">
                     <div class="sub_menu"><img src="../enhancements/images/training/TO-Training-Heal.png" class="display_box_tool"></div>
-                    <div class="sub_menu_text_tools" style="margin-top:-15px">Enhancement<br/><span class="enhance_sub_text">Shopping List</span></div>
+                    <div class="sub_menu_text_tools" style="margin-top:-15px">Enhancement<br/>Shopping List</div>
                </div>
                <a href="https://cod.uberguy.net/" target="_blank">
                     <div class="tools_display">
